--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    flutter_svg: ^1.1.4
+    # flutter_svg: ^1.1.4
 
   cupertino_icons: ^1.0.2
 
