Update readme and pubspec files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_login_register_ui
-description: A new Flutter project.
+description: Flutter Login & Register UI.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The version and build number of the app
